--- a/template.css
+++ b/template.css
@@ -5,17 +5,27 @@ body::-webkit-scrollbar {
 body {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    margin: 0;
+}
+
+#header{
+    margin: 0;
+}
+
+.main{
+    margin-top: 70px;
 }
 
 /*Properties for navbar and the positioning of items it contains*/
 .navbarContainer {
+    position: fixed;
+    top: 0;
+    width: 110%;
     background-color: #132D48;
     display: flex;
     color: #FFFFFF;
     font-size: 17px;
     height: 60px;
-    /*Rounded edges*/
-    border-radius: 25px;
     /*Horizontal orientation*/
     justify-content: space-evenly;
     /*Vertical orientation*/
@@ -23,7 +33,7 @@ body {
     box-shadow: 0 4px 2px -2px gray;
 }
 
-/*Ingores blue color of all a elements inside the navbar*/
+/*Ignores blue color of all a elements inside the navbar*/
 .navbarContainer a{
     color: inherit;
 }
@@ -56,7 +66,7 @@ body {
 .dropdownContent {
     display: none;
     position: absolute;
-    min-width: 160px;
+    width: fit-content;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -86,7 +96,7 @@ body {
 /*Remove border and set height to fit content for use*/
 section{
     height: 200px;
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 15%;
     margin-right: 15%;
     border: 5px solid black ;
@@ -106,4 +116,11 @@ section{
     height: 150px;
     width: 150px;
     border-radius: 50%;
+}
+
+@media  screen and (max-width: 1250px){
+    .footerContainer img{
+        height: 75px;
+        width: 75px;
+    }
 }
